[package]
name = "s2lp"
version = "0.1.0"
edition = "2021"

[dependencies]
device-driver = { git = "https://github.com/diondokter/device-driver.git", rev = "5dbdce1" }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
defmt = { version = "0.3", optional = true }
embassy-futures = { version = "0.1.1", default-features = false }

[features]
defmt-03 = ["dep:defmt"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
futures-test = "0.3.31"
