[package]
edition = "2021"
name = "stm32u0-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"
default-run = "rx_basic_packet"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "time-driver-any", "stm32u083rc", "memory-x", "unstable-pac", "exti", "chrono"]  }
# embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
# embassy-usb = { version = "0.2.0", default-features = false, features = ["defmt"] }
# embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal-bus = { version = "0.2.0", features = ["async", "defmt-03"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }

s2lp = { path = "../", features = ["defmt-03"] }
portable-atomic = { version = "1.3", default-features = false, features = ["unsafe-assume-single-core"] }

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "3e2b015" }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "3e2b015" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "3e2b015" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "3e2b015" }
# embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "3e2b015" }
# embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "3e2b015" }

[features]
# Target the discovery kit instead of the nucleo
dk = []

[profile.release]
debug = 2
lto = true
opt-level = "z"
overflow-checks = true
